fix(root): fixes navigation styling on small devices
fixes navigation styling to match page header colour

--- a/src/templates/Standard/index.css
+++ b/src/templates/Standard/index.css
@@ -21,6 +21,22 @@
   flex-direction: column;
 }
 
+@media screen and (max-width: 576px) {
+  .subsection-nav {
+    background-color: var(--ic-architectural-40);
+    margin: calc(-1 * var(--ic-space-xs)) calc(-1 * var(--ic-space-xs));
+    padding: var(--ic-space-md) var(--ic-space-xs);
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  .subsection-nav {
+    background-color: var(--ic-architectural-40);
+    margin: calc(-1 * var(--ic-space-xs)) calc(-1 * var(--ic-space-md));
+    padding: var(--ic-space-md);
+  }
+}
+
 @media screen and (max-width: 768px) {
   .page-content-container {
     display: flex;
